1.2.0b5:
    WATO:
    * FIX: fix folding problems with dependent host tags

    Multisite:
    * FIX: remove refresh button from dashboard.
    * New display type 'boxes-omit-root' for BI views
    * Hostgroup view BI Boxes omits the root level
    * Finalized layout if view options and commands/filters/painteroptions.

    BI:
    * New aggregation function count_ok, that counts the number
      of nodes in state OK.

    Checks & Agents:
    * AIX: convert NIC check to lnx_if (now being compatible with if/if64)
    * AIX: new check for CPU utilization (using section lparstat_aix)

1.2.0b4:
    Core:
    * New configuration variable snmp_timing, allowing to 
      configure timeout and retries for SNMP requests (also via WATO)
    * New configuration variable custom_checks. This is mainly for
      WATO but also usable in main.mk It's a variant of legacy_checks that
      automatically creates the required "define command" sections.

    WATO:
    * ps and ps.perf configurable via WATO now (without inventory)
    * New layout of main menu and a couple of other similar menus
    * New layout of ruleset overviews
    * Hide check_mk variable names per default now (change via global settings)
    * New layout of global settings
    * Folder layout: show contact groups of folder
    * Folder movement: always show complete path to target folder
    * Sidebar snapin: show pending changes
    * New rule for configuring custom_checks - allowing to run arbitrary
      active checks even if not yet formalized (like HTTP and TCP)
    * Added automation_commands to make automations pluginable
    * New layout and new internal implementation of input forms
    * New layout for view overview and view editor
    * Split up host search in two distinct pages
    * Use dynamic items in rule editor for hosts and items (making use
      of ListOfStrings())
    * FIX: audit log was not shown if no entry for today existed
    * FIX: fix parent scan on single site installations